changed frontend to fix on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,24 +16,19 @@ html, body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   transition: color 0.3s;
+   scroll-behavior: smooth;
+  scroll-padding-top: 6rem; /* adjust this to match your navbar height */
 }
 
 *, *::before, *::after {
   box-sizing: inherit;
 }
 
-section[id]::before {
-  content: "";
-  display: block;
-  height: 64px;
-  margin-top: -20px;
-  visibility: hidden;
-  pointer-events: none;
-}
-
 button, a.button {
   transition: all 0.3s ease;
+  cursor: pointer;
 }
 button:hover, a.button:hover {
-  filter: brightness(1.1);
+  filter: brightness(1.05);
+  transform: scale(1.03);
 }
